@@ -1,3 +1,8 @@
+2009-11-26  Brian Gough  <bjg@network-theory.co.uk>
+
+	* qrstep.c (qrstep): handle the case where |mu| >> |d0| + |sd0| to
+	prevent infinite loop
+
 2009-07-09  Brian Gough  <bjg@network-theory.co.uk>
 
 	* symmv.c (gsl_eigen_symmv_free): handle NULL argument in free
